.kube/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: website-test  # Maybe terraform to make this dynamic for multiple envs.
  labels:
    env: test
    project: website
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
  namespace: website-test
  labels:
    env: test
    project: website
    name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      env: test
      project: website
      name: ui
  template:
    metadata:
      name: ui
      namespace: website-test
      labels:
        env: test
        project: website
        name: ui
    spec:
      containers:
        - image: medkha/website:1.0.2
          name: ui
          # Experimenting, not sure yet the optimal values.
          resources:
            requests:
              memory: 20Mi
            limits:
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: website-test
  labels:
    env: test
    project: website
    name: ui
spec:
  selector:
    name: ui
    project: website
    env: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ui
  namespace: website-test
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.medkha.com`)
      kind: Rule
      services:
        - name: ui
          port: 80
  tls: {}
